<resources>
    <string name="app_name">Upcycling</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="version">Alpha version 0.1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="samsung_ecobox_map">Samsung ecobox map</string>
    <string name="feed">Feed</string>
    <string name="map">Map</string>
    <string name="add_post">Добавить запись</string>
    <string name="likes">Likes</string>
    <string name="posts">Posts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_login">Email (Login)</string>
    <string name="user_name">User name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_post">Create post</string>
    <string name="publish">Publish</string>
    <string name="have_a_new_idea">Have a new idea?</string>
</resources>