<?xml version="1.0" encoding="utf-8"?><navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_feed">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.predmephiteam.upcycling.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.predmephiteam.upcycling.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.predmephiteam.upcycling.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>