<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="@id/create_right"
        app:layout_constraintStart_toStartOf="@id/create_left"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_button"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:background="@drawable/back_button"
                android:src="@drawable/ic_icon_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/create_post"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/post_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="@id/create_right"
        app:layout_constraintStart_toStartOf="@id/create_left"
        app:layout_constraintTop_toBottomOf="@id/bar"
        app:layout_constraintBottom_toTopOf="@id/bottom_post_text"
        android:hint="@string/have_a_new_idea"
        android:gravity="top"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/publish_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/green_button"
        android:text="@string/publish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/create_right"
        app:layout_constraintStart_toStartOf="@id/create_left" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/add_photo_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_icon_add_photo"
        android:background="@color/white"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="@id/create_left"
        app:layout_constraintEnd_toEndOf="@id/create_right"
        app:layout_constraintTop_toTopOf="@id/top_add_photo"
        app:layout_constraintBottom_toBottomOf="@id/bottom_add_photo"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="144dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="128dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="64dp" />


</androidx.constraintlayout.widget.ConstraintLayout>